# opus

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
src/opus/: lexer.py  main.py
src/tests/: test.py  test_lexer.py
